--- a/src/gwt/public/index.html
+++ b/src/gwt/public/index.html
@@ -1,40 +1,36 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Whirled Shell</title>
+  <title>Whirled</title>
+  <meta content="Play games, make friends, explore, chat, shop and create all in your own Whirled."
+        name="description"/>
+  <meta content="games,friends,explore,chat,shop,create,whirled" name="keywords"/>
+
   <link rel="stylesheet" href="/css/global.css" type="text/css"/>
   <link rel="stylesheet" href="/css/gwt.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/account.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/admin.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/games.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/help.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/item.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/mail.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/me.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/msgs.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/people.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/shop.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/stuff.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/swiftly.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/world.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/whirleds.css" type="text/css"/>
   <link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon"/>
 </head>
 
 <body>
-  <table id="ctable" width="100%" cellpadding="0" cellspacing="0" style="padding: 0; margin: 0;">
+  <div id="loadingAndTests" class="loading">
+      <h2>Whirled is loading...</h2>
+      <noscript><blockquote>
+          Whirled requires JavaScript to operate. Please turn it on in your browser.
+          <p>If you would like more information, please read our instructions on
+          <a href="http://wiki.whirled.com/How_To_Enable_JavaScript">how to turn on JavaScript</a>.
+      </blockquote></noscript>
+  </div>
+
+  <table id="ctable" width="100%" height="100%" cellpadding="0" cellspacing="0"
+         style="padding: 0; margin: 0;">
   <tr><td colspan="3" id="header"></td></tr>
-  <tr><td valign="top" id="content" style="background: #FFFFFF"></td>
-      <td valign="top" id="client"></td></tr>
+  <tr><td valign="top" id="content" style="background: #FFFFFF; display: none"></td>
+      <td valign="top" id="client" height="100%"></td></tr>
   </table>
   <iframe id="__gwt_historyFrame" style="width:0px;height:0px;border:0px;display:none"></iframe>
-  <script language="javascript" src="/msoy/msoy.nocache.js"></script>
-  <script src="/js/md5.js" type="text/javascript"></script>
-  <noscript><blockquote>
-    Whirled requires JavaScript to operate. Please turn it on in your browser.
-
-    <p>If you would like more information, please read our instructions on 
-    <a href="http://wiki.whirled.com/How_To_Enable_JavaScript">how to turn on JavaScript</a>.
-  </blockquote></noscript>
+  <script language="javascript" src="/frame/frame.nocache.js"></script>
+  <script id="swfobject" type="text/javascript"></script>
+  <script id="md5" type="text/javascript"></script>
+  <script id="googanal" type="text/javascript"></script>
 </body>
 </html>
