--- a/src/gwt/public/frame.html
+++ b/src/gwt/public/frame.html
@@ -8,6 +8,7 @@
 
   <link rel="stylesheet" href="/css/global.css" type="text/css"/>
   <link rel="stylesheet" href="/css/gwt.css" type="text/css"/>
+  <link rel="stylesheet" href="/css/frame.css" type="text/css"/>
   <link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon"/>
 </head>
 
