--- a/src/gwt/public/mail.html
+++ b/src/gwt/public/mail.html
@@ -4,11 +4,13 @@
   <title>Mail</title>
   <link rel="stylesheet" href="/css/global.css" type="text/css"/>
   <link rel="stylesheet" href="/css/gwt.css" type="text/css"/>
+  <link rel="stylesheet" href="/css/page.css" type="text/css"/>
+  <link rel="stylesheet" href="/css/item.css" type="text/css"/>
   <link rel="stylesheet" href="/css/mail.css" type="text/css"/>
 </head>
 
 <body>
-  <div id="content" style="background: #FFFFFF"/>
+  <div id="content" style="background: #FFFFFF; height: 100%"/>
   <iframe id="__gwt_historyFrame" style="width:0px;height:0px;border:0px;display:none"></iframe>
   <script language="javascript" src="/mail/mail.nocache.js"></script>
 </body>
