--- a/src/gwt/public/mail.html
+++ b/src/gwt/public/mail.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div id="content" style="background: #FFFFFF; height: 100%"/>
+  <div id="content" style="background: #FFFFFF; height: 100%"></div>
   <iframe id="__gwt_historyFrame" style="width:0px;height:0px;border:0px;display:none"></iframe>
   <script language="javascript" src="/mail/mail.nocache.js"></script>
 </body>
