A whole bunch of extracting, rearranging, untangling, slapping, flipping and even some rubbing down. More pages now work in standalone mode and they're not totally enormous.

--- a/src/gwt/public/help.html
+++ b/src/gwt/public/help.html
@@ -5,14 +5,12 @@
   <link rel="stylesheet" href="/css/global.css" type="text/css"/>
   <link rel="stylesheet" href="/css/gwt.css" type="text/css"/>
   <link rel="stylesheet" href="/css/page.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/person.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/item.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/me.css" type="text/css"/>
+  <link rel="stylesheet" href="/css/help.css" type="text/css"/>
 </head>
 
 <body>
   <div id="content" style="background: #FFFFFF; height: 100%"></div>
   <iframe id="__gwt_historyFrame" style="width:0px;height:0px;border:0px;display:none"></iframe>
-  <script language="javascript" src="/me/me.nocache.js"></script>
+  <script language="javascript" src="/help/help.nocache.js"></script>
 </body>
 </html>
