--- a/src/gwt/public/games.html
+++ b/src/gwt/public/games.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="/css/gwt.css" type="text/css"/>
   <link rel="stylesheet" href="/css/page.css" type="text/css"/>
   <link rel="stylesheet" href="/css/item.css" type="text/css"/>
+  <link rel="stylesheet" href="/css/msgs.css" type="text/css"/>
   <link rel="stylesheet" href="/css/games.css" type="text/css"/>
 </head>
 
