--- a/src/gwt/public/frame.html
+++ b/src/gwt/public/frame.html
@@ -29,7 +29,7 @@
       <td valign="top" id="client" height="100%"></td></tr>
   </table>
   <iframe id="__gwt_historyFrame" style="width:0px;height:0px;border:0px;display:none"></iframe>
-  <script language="javascript" src="/frame/frame.nocache.js"></script>
+  <script language="javascript" src="frame.nocache.js"></script>
   <script id="swfobject" type="text/javascript"></script>
   <script id="md5" type="text/javascript"></script>
   <script id="googanal" type="text/javascript"></script>
