--- a/src/gwt/public/me.html
+++ b/src/gwt/public/me.html
@@ -13,6 +13,6 @@
 <body>
   <div id="content" style="background: #FFFFFF; height: 100%"></div>
   <iframe id="__gwt_historyFrame" style="width:0px;height:0px;border:0px;display:none"></iframe>
-  <script language="javascript" src="/me/me.nocache.js"></script>
+  <script language="javascript" src="me.nocache.js"></script>
 </body>
 </html>
