--- a/src/gwt/public/people.html
+++ b/src/gwt/public/people.html
@@ -15,6 +15,6 @@
 <body>
   <div id="content" style="background: #FFFFFF; height: 100%"></div>
   <iframe id="__gwt_historyFrame" style="width:0px;height:0px;border:0px;display:none"></iframe>
-  <script language="javascript" src="/people/people.nocache.js"></script>
+  <script language="javascript" src="people.nocache.js"></script>
 </body>
 </html>
