--- a/src/gwt/public/stuff.html
+++ b/src/gwt/public/stuff.html
@@ -11,6 +11,6 @@
 <body>
   <div id="content" style="background: #FFFFFF; height: 100%"></div>
   <iframe id="__gwt_historyFrame" style="width:0px;height:0px;border:0px;display:none"></iframe>
-  <script language="javascript" src="/stuff/stuff.nocache.js"></script>
+  <script language="javascript" src="stuff.nocache.js"></script>
 </body>
 </html>
