--- a/src/gwt/public/world.html
+++ b/src/gwt/public/world.html
@@ -12,6 +12,6 @@
 <body>
   <div id="content" style="background: #FFFFFF; height: 100%"></div>
   <iframe id="__gwt_historyFrame" style="width:0px;height:0px;border:0px;display:none"></iframe>
-  <script language="javascript" src="/world/world.nocache.js"></script>
+  <script language="javascript" src="world.nocache.js"></script>
 </body>
 </html>
